| Summary: | ASTERISK-29494: cdr_adaptive_odbc: Prevent throwing warnings if CDR filtering is used | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2021-06-28 08:42:28 | Date Closed: | 2021-08-04 09:26:24 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | CDR/cdr_adaptive_odbc |
| Versions: | 18.5.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The way the code is currently written, if there is more than one CDR section defined (let's say n sections) and filters are used so that certain CDR records use fewer than n of the sections, there will always be warnings emitted, for every single CDR. In the case where each section's filters are set up so that every CDR record goes in only one of them, you will see n-1 warnings every time any CDR record is finalized. This is generally explicitly desired, so there should not be warnings emitted for the correct behavior. This turns the warning into a debug message. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-06-28 08:42:29.140-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-08-04 09:26:26.258-0500 Change 16078 merged by Friendly Automation: cdr_adaptive_odbc: Prevent filter warnings [https://gerrit.asterisk.org/c/asterisk/+/16078|https://gerrit.asterisk.org/c/asterisk/+/16078] By: Friendly Automation (friendly-automation) 2021-08-04 09:27:24.752-0500 Change 16263 merged by Friendly Automation: cdr_adaptive_odbc: Prevent filter warnings [https://gerrit.asterisk.org/c/asterisk/+/16263|https://gerrit.asterisk.org/c/asterisk/+/16263] By: Friendly Automation (friendly-automation) 2021-08-04 09:27:54.374-0500 Change 16262 merged by Friendly Automation: cdr_adaptive_odbc: Prevent filter warnings [https://gerrit.asterisk.org/c/asterisk/+/16262|https://gerrit.asterisk.org/c/asterisk/+/16262] By: Friendly Automation (friendly-automation) 2021-08-04 09:36:49.103-0500 Change 16261 merged by George Joseph: cdr_adaptive_odbc: Prevent filter warnings [https://gerrit.asterisk.org/c/asterisk/+/16261|https://gerrit.asterisk.org/c/asterisk/+/16261] | ||